[package]
name = "rust-code-quality-journey"
version = "0.1.0"
edition = "2021"
author = "André LECLERCQ pour Oclock"

[dependencies]
anyhow = "1.0.89"
clap = "4.5.19"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"

[lib]
name = "password_generator"
path = "src/lib.rs"

[[bin]]
name = "password_generator_cli"
path = "src/main.rs"
